--- a/resume.html
+++ b/resume.html
@@ -92,7 +92,7 @@
 </footer>
 <!-- END FOOTER -->
 
-<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="js/jquery-1.12.0.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
