--- a/test/index.html
+++ b/test/index.html
@@ -2,8 +2,8 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/practice.js"></script>
+    <link rel="stylesheet" href="../css/style.css" />
+    <script src="../js/practice.js"></script>
     <title>Hello HTML 5</title>
 </head>
 <body>
